fix: lots of style and organization changes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,25 @@
 html {
-    background-color: lavenderblush;
+    background-color: #F2AF29;
+    background-image: url("data:image/svg+xml,%3Csvg width='80' height='80' viewBox='0 0 80 80' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ea4f00' fill-opacity='0.5'%3E%3Cpath d='M50 50c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10s-10-4.477-10-10 4.477-10 10-10zM10 10c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10S0 25.523 0 20s4.477-10 10-10zm10 8c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm40 40c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 350;
+    margin: 0;
+}
+
+h1, h2, h3, p {
+    margin: 0;
+    padding: 0;
+}
+
+.main {
+    width: 90%;
+    max-width: 600px;
+    margin: 25px auto;
+    background: #e0e0ce;
+    padding: 25px;
+    border-radius: 10px;
+    border: 3px solid #f2af29;
 }
