--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -2,8 +2,32 @@
     position: fixed;
 }
 
+.nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 15px;
+    background: #ce0e2d;
+    border-radius: 0px 0px 10px 0px;
+}
+.nav li {
+    padding: 0;
+    margin: 0;
+}
+.nav a {
+    color: #e0e0ce;
+}
+
+.nav_pull {
+    display: inline-block;
+    padding: 10px 25px;
+    color: #e0e0ce;
+    background: #ce0e2d;
+    border-radius: 0 0 10px 10px;
+}
+
 @media (min-width: 768px) {
     .nav {
-        position: relative;
+        top: 0;
+        right: 250px;
     }
 }
