--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@ html {
 body {
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 350;
+    letter-spacing: 1px;
     margin: 0;
 }
 
@@ -15,11 +16,17 @@ h1, h2, h3, p {
 }
 
 .main {
+    position: relative;
     width: 90%;
     max-width: 600px;
     margin: 25px auto;
     background: #e0e0ce;
+    color: #111;
     padding: 25px;
     border-radius: 10px;
-    border: 3px solid #f2af29;
+    border: 3px solid #ce0e2d;
+}
+
+.main a {
+    color: #ce0e2d;
 }
