updated for nav styling between mobile and desktop

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,11 @@ h1, h2, h3, p {
     padding: 0;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .main {
     position: relative;
     width: 90%;
