--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -1,5 +1,7 @@
 .nav {
     position: fixed;
+    bottom: 0;
+    right: 25px;
 }
 
 .nav ul {
@@ -7,27 +9,49 @@
     margin: 0;
     padding: 15px;
     background: #ce0e2d;
-    border-radius: 0px 0px 10px 0px;
+    border-radius: 0px 10px 0px 0px;
 }
 .nav li {
     padding: 0;
-    margin: 0;
+    margin: 5px 0;
 }
 .nav a {
     color: #e0e0ce;
+    text-decoration: none;
 }
 
-.nav_pull {
-    display: inline-block;
+.nav_pull, .nav_pull_mobile {
     padding: 10px 25px;
     color: #e0e0ce;
     background: #ce0e2d;
-    border-radius: 0 0 10px 10px;
+    border-radius: 10px 10px 0 0;
+}
+.nav_pull {
+    display: none;
+}
+
+.nav_pull_mobile {
+    display: inline-block;
 }
 
 @media (min-width: 768px) {
     .nav {
         top: 0;
         right: 250px;
+        bottom: unset;
+    }
+
+    .nav_pull_mobile {
+        display: none;
+    }
+    .nav_pull {
+        display: inline-block;
+    }
+
+    .nav ul {
+        border-radius: 0 0 10px 0;
+    }
+    .nav_pull {
+        border-radius: 0 0 10px 10px;
     }
 }
