--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -10,6 +10,7 @@
     padding: 15px;
     background: #ce0e2d;
     border-radius: 0px 10px 0px 0px;
+    min-width: 120px;
 }
 .nav li {
     padding: 0;
