--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,11 +27,15 @@ img {
     margin: 25px auto;
     background: #e0e0ce;
     color: #111;
-    padding: 25px;
     border-radius: 10px;
     border: 3px solid #ce0e2d;
 }
 
 .main a {
     color: #ce0e2d;
+}
+
+.content {
+    margin: 25px auto;
+    width: 90%;
 }
