messing with font styling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,6 +43,10 @@ h1, h2, h3, p {
     padding: 0;
 }
 
+h1, h2, h3 {
+    font-family: 'VT323';
+}
+
 img {
     max-width: 100%;
     height: auto;
