--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,10 @@ ol, ul {
     list-style: none;
 }
 
+div {
+    box-sizing: border-box;
+}
+
 /*** End CSS Reset ***/
 
 @import url('https://fonts.googleapis.com/css?family=Inconsolata|VT323&display=swap');
